# LSPU-E-Libramo

./: .gitignore  README.md  package-lock.json  package.json  populate_db.py  pyproject.toml  requirements.txt  tailwind.config.js
app/: __init__.py  auth.py  book.py  db.py  schema.sql  sorting-algo.py  sorting_algo.py  sorts.py
app/static/: output.css  tables.css
app/static/script/: main.js
app/templates/: base.html  landing.html
app/templates/auth/: login.html  register.html
app/templates/book/: index.html  view.html  viewavailable.html  viewborrowed.html
app/templates/book/partials/: add-book-form.html  books-table.html  header.html  modal.html  skeleton.html  table-nav.html  table.html  toast-notif.html
tests/: data.sql  test_auth.py  test_db.py
